TBD-1603: Fix all HELP messages for Big Data components.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
@@ -1,6 +1,6 @@
 #Created by JInto - www.guh-software.de
 #Sun Mar 12 14:18:12 CST 2000
-HELP=org.talend.help.tHBaseInput
+HELP=org.talend.help.tHBaseConnection
 LONG_NAME=Reads an HBase table and extracts fields based on an SQL query
 ZOOKEEPER_QUORUM.NAME=Zookeeper quorum 
 ZOOKEEPER_CLIENT_PORT.NAME=Zookeeper client port
