--- a/main/plugins/org.talend.designer.components.bigdata/components/tHBaseOutput/tHBaseOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHBaseOutput/tHBaseOutput_messages.properties
@@ -1,4 +1,4 @@
-HELP=org.talend.help.tHBaseConnection
+HELP=org.talend.help.tHBaseOutput
 LONG_NAME=Inserts or updates lines into an HBase table
 USE_EXISTING_CONNECTION.NAME=Use an existing connection
 CONNECTION.NAME
