--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSCopy/tHDFSCopy_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSCopy/tHDFSCopy_messages.properties
@@ -1,4 +1,4 @@
-HELP=org.talend.help.tHDFSFileCopy
+HELP=org.talend.help.tHDFSCopy
 LONG_NAME=copy,move a file or directory on HDFS
 
 USE_EXISTING_CONNECTION.NAME=Use an existing connection
