--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSExist/tHDFSExist_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSExist/tHDFSExist_messages.properties
@@ -1,4 +1,4 @@
-HELP=org.talend.help.tHDFSFileExist
+HELP=org.talend.help.tHDFSExist
 LONG_NAME=Checks if a file exists on HDFS
 
 USE_EXISTING_CONNECTION.NAME=Use an existing connection
