--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSList/tHDFSList_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSList/tHDFSList_messages.properties
@@ -1,4 +1,4 @@
-HELP=org.talend.help.tHDFSFileList
+HELP=org.talend.help.tHDFSList
 LONG_NAME=list file or directory on HDFS
 
 USE_EXISTING_CONNECTION.NAME=Use an existing connection
