--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSOutput/tHDFSOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSOutput/tHDFSOutput_messages.properties
@@ -1,7 +1,7 @@
 #Created by JInto - www.guh-software.de
 #Mon Feb 25 13:37:58 CST 2008
 CODE.NAME=Code
-HELP=org.talend.help.tHDFSInput
+HELP=org.talend.help.tHDFSOutput
 LONG_NAME=Writes data to HDFS
 
 USE_EXISTING_CONNECTION.NAME=Use an existing connection
