--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSRename/tHDFSRename_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSRename/tHDFSRename_messages.properties
@@ -1,5 +1,5 @@
 LONG_NAME=Rename files on HDFS
-HELP=org.talend.help.tHDFSFileRename
+HELP=org.talend.help.tHDFSRename
 USE_EXISTING_CONNECTION.NAME=Use an existing connection
 
 CONNECTION.NAME=Component list
