--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBWriteConf/tMongoDBWriteConf_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBWriteConf/tMongoDBWriteConf_messages.properties
@@ -14,7 +14,7 @@ DATA_ACTION.ITEM.UPSERT_WITH_SET=Upsert with set
 DATA_ACTION.NAME=Action on data
 DIE_ON_ERROR.NAME=Die on error
 DROP_COLLECTION_CREATE.NAME=Drop collection if exist
-HELP=org.talend.help.tMongoDBOutputOut
+HELP=org.talend.help.tMongoDBWriteConf
 HOST.NAME=Server
 LONG_NAME=Generate json doucument and output into MongoDB database
 NB_LINE.NAME=NB_LINE
