--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigCode/tPigCode_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigCode/tPigCode_messages.properties
@@ -1,4 +1,4 @@
-HELP=org.talend.help.tPig
+HELP=org.talend.help.tPigCode
 LONG_NAME=Execute your own PigLatin script into a Pig flow
 SCRIPT_CODE.NAME=Script Code
 
