--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigFilterColumns/tPigFilterColumns_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigFilterColumns/tPigFilterColumns_messages.properties
@@ -1,4 +1,4 @@
-HELP=org.talend.help.tPigConnection
+HELP=org.talend.help.tPigFilterColumns
 LONG_NAME=Filter columns within a table
 
 COLUMNS_CONFIG.NAME=Columns
