--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigFilterRow/tPigFilterRow_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigFilterRow/tPigFilterRow_messages.properties
@@ -1,4 +1,4 @@
-HELP=org.talend.help.tPigConnection
+HELP=org.talend.help.tPigFilterRow
 LONG_NAME=Selects tuples from a relation based on some condition.
 
 FILTER_CONFIG.NAME=Filter configuration
