--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -1,4 +1,4 @@
-HELP=org.talend.help.tPigConnection
+HELP=org.talend.help.tPigLoad
 LONG_NAME=Open the PigServer connection and read the input file
 
 CONFIGURATION.NAME=Configuration
