--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -1,4 +1,4 @@
-HELP=org.talend.help.tPigConnection
+HELP=org.talend.help.tPigStoreResult
 LONG_NAME=Store the result into a given file.
 
 HCAT_CONFIGURATION.NAME=HCatalog Configuration
