--- a/main/plugins/org.talend.designer.components.bigdata/components/tSAPHanaOutput/tSAPHanaOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSAPHanaOutput/tSAPHanaOutput_messages.properties
@@ -28,7 +28,7 @@ DATA_ACTION.ITEM.UPDATE_OR_INSERT=Update or insert
 DATA_ACTION.NAME=Action on data
 DIE_ON_ERROR.NAME=Die on error
 ENCODING.NAME=Encoding
-HELP=org.talend.help.tDB2Output
+HELP=org.talend.help.tSAPHanaOutput
 HOST.NAME=Host
 LONG_NAME=Inserts or updates lines into a DB2 table 
 NB_LINE.NAME=Number of line
