[TBD-2370] Allow tKafkaInput to retrieve the offset of the message

--- a/main/plugins/org.talend.designer.components.bigdata/components/tKafkaInput/tKafkaInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tKafkaInput/tKafkaInput_messages.properties
@@ -30,3 +30,5 @@ KAFKA_DUAL_COMMIT_CHECK.NAME=Enable dual commit
 OUTPUT_TYPE.NAME=Output type
 OUTPUT_TYPE.ITEM.BYTES=byte[]
 OUTPUT_TYPE.ITEM.STRING=String
+
+SAVE_OFFSET.NAME=Save the current offset with the message.
