--- a/main/plugins/org.talend.libraries.mongo/pom.xml
+++ b/main/plugins/org.talend.libraries.mongo/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.talend.studio</groupId>
     <artifactId>tbd-studio-se</artifactId>
-    <version>6.0.1-SNAPSHOT</version>
+    <version>6.0.1</version>
     <relativePath>../../../</relativePath>
   </parent>
   <artifactId>org.talend.libraries.mongo</artifactId>
