--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
@@ -64,6 +64,7 @@ HIVE_VERSION.ITEM.APACHE_2_4_0_EMR_0_13_1=Apache 2.4.0 (Hive 0.13.1)
 HIVE_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (Hive 0.8.1)
 HIVE_VERSION.ITEM.APACHE_2_4_0_EMR=Apache 2.4.0 (Hive 0.11.0)
 HIVE_VERSION.ITEM.MICROSOFT_HD_INSIGHT_3_1=Microsoft HD Insight 3.1
+HIVE_VERSION.ITEM.MICROSOFT_HD_INSIGHT_3_2=Microsoft HD Insight 3.2
 
 HIVE_SERVER.NAME=Hive Server
 HIVE_SERVER.ITEM.HIVE=Hive 1
