--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -46,6 +46,7 @@ PIG_VERSION.ITEM.EMR_4_0_0=EMR 4.0.0 (Pig 0.14.0)
 PIG_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
 PIG_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
 PIG_VERSION.ITEM.MICROSOFT_HD_INSIGHT_3_1=Microsoft HD Insight 3.1
+PIG_VERSION.ITEM.MICROSOFT_HD_INSIGHT_3_2=Microsoft HD Insight 3.2
 
 FS_DEFAULT_NAME.NAME=NameNode URI
 MAPRED_JOB_TRACKER.NAME=JobTracker Host
