--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -86,6 +86,7 @@ DISTRIBUTION.ITEM.APACHE=Apache
 DISTRIBUTION.ITEM.CUSTOM=Custom - Unsupported
 DISTRIBUTION.ITEM.AMAZON_EMR=Amazon EMR
 DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
+DISTRIBUTION.ITEM.MICROSOFT_HD_INSIGHT=Microsoft HD Insight
 
 HBASE_VERSION.NAME=Version
 HBASE_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
@@ -112,6 +113,7 @@ HBASE_VERSION.ITEM.APACHE_2_4_0_EMR=Apache 2.4.0 (HBase 0.94.18)
 HBASE_VERSION.ITEM.EMR_4_0_0=EMR 4.0.0
 HBASE_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
 HBASE_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
+HBASE_VERSION.ITEM.MICROSOFT_HD_INSIGHT_3_1=Microsoft HD Insight 3.1
 
 CUSTOM_JARS.NAME=Custom jars
 CUSTOM_JARS.ITEM.JAR_NAME=Jar name
