[TBD-2547] support MapR 5 in DI: HDFS, HBase, HBase, Sqoop, Pig, HCatalog, Pig with HCatalog, Pig with Avro, Pig with rcfile, Pig with HBase, Hive, Hive with HBase, HBase; in MR: MapReduce job and HBase on MapReduce job
HBase is MapR DB not Apache HBase

for pig with rcfile, but need to use old version of hive,
0.14 missing hadoop23 class, 1.0 missing a method

don't support tez for MapR 5, as they didn't update the dependency from
MapR41x to MapR 5

https://jira.talendforge.org/browse/TBD-2547

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHCatalogOutput/tHCatalogOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHCatalogOutput/tHCatalogOutput_messages.properties
@@ -25,6 +25,7 @@ HCAT_VERSION.ITEM.Cloudera_CDH5_4=Cloudera CDH5.4(YARN mode)
 HCAT_VERSION.ITEM.MAPR310=MapR 3.1.0
 HCAT_VERSION.ITEM.MAPR401=MapR 4.0.1(YARN mode)
 HCAT_VERSION.ITEM.MAPR410=MapR 4.1.0(YARN mode)
+HCAT_VERSION.ITEM.MAPR500=MapR 5.0.0(YARN mode)
 
 HDFS_CONFIGURATION.NAME=HDFS Configuration
 
