--- a/main/plugins/org.talend.designer.components.bigdata/components/tHBaseOutput/tHBaseOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHBaseOutput/tHBaseOutput_messages.properties
@@ -89,6 +89,7 @@ HBASE_VERSION.ITEM.MAPR301=MapR 3.0.1
 HBASE_VERSION.ITEM.MAPR310=MapR 3.1.0
 HBASE_VERSION.ITEM.MAPR401=MapR 4.0.1(YARN mode)
 HBASE_VERSION.ITEM.MAPR410=MapR 4.1.0(YARN mode)
+HBASE_VERSION.ITEM.MAPR500=MapR 5.0.0(YARN mode)
 
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
 
