--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSPut/tHDFSPut_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSPut/tHDFSPut_messages.properties
@@ -27,6 +27,7 @@ DB_VERSION.ITEM.MAPR301=MapR 3.0.1
 DB_VERSION.ITEM.MAPR310=MapR 3.1.0
 DB_VERSION.ITEM.MAPR401=MapR 4.0.1(YARN mode)
 DB_VERSION.ITEM.MAPR410=MapR 4.1.0(YARN mode)
+DB_VERSION.ITEM.MAPR500=MapR 5.0.0(YARN mode)
 DB_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0
 DB_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 DB_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0(Condor)
