--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
@@ -60,6 +60,7 @@ HIVE_VERSION.ITEM.MAPR301=MapR 3.0.1
 HIVE_VERSION.ITEM.MAPR310=MapR 3.1.0
 HIVE_VERSION.ITEM.MAPR401=MapR 4.0.1(YARN mode)
 HIVE_VERSION.ITEM.MAPR410=MapR 4.1.0(YARN mode)
+HIVE_VERSION.ITEM.MAPR500=MapR 5.0.0(YARN mode)
 HIVE_VERSION.ITEM.EMR_4_0_0=EMR 4.0.0 (Hive 1.0.0)
 HIVE_VERSION.ITEM.APACHE_2_4_0_EMR_0_13_1=Apache 2.4.0 (Hive 0.13.1)
 HIVE_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (Hive 0.8.1)
