--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -102,6 +102,7 @@ HBASE_VERSION.ITEM.MAPR301=MapR 3.0.1
 HBASE_VERSION.ITEM.MAPR310=MapR 3.1.0
 HBASE_VERSION.ITEM.MAPR401=MapR 4.0.1(YARN mode)
 HBASE_VERSION.ITEM.MAPR410=MapR 4.1.0(YARN mode)
+HBASE_VERSION.ITEM.MAPR500=MapR 5.0.0(YARN mode)
 HBASE_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (HBase 0.92.0)
 HBASE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4.X (MR 1 mode)
 HBASE_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3+(YARN mode)
