--- a/main/plugins/org.talend.libraries.hadoop.mapr.5.0.0/plugin.xml
+++ b/main/plugins/org.talend.libraries.hadoop.mapr.5.0.0/plugin.xml
@@ -94,6 +94,11 @@
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.libraries.hadoop.mapr.5.0.0"
+            id="hbase-server-mapr-5.0.X-lastest"       
+            name="hbase-server-0.98.12-mapr-1506.jar" mvn_uri="mvn:org.talend.libraries/hbase-server-0.98.12-mapr-1506/6.1.0">
+        </libraryNeeded>
+        <libraryNeeded
+            context="plugin:org.talend.libraries.hadoop.mapr.5.0.0"
             id="sqoop-mapr-5.0.X-lastest"       
             name="sqoop-1.4.6-mapr-1506.jar" mvn_uri="mvn:org.talend.libraries/sqoop-1.4.6-mapr-1506/6.1.0">
         </libraryNeeded>
@@ -117,7 +122,41 @@
             id="hive-metastore-mapr-5.0.X-lastest"       
             name="hive-metastore-1.0.0-mapr.jar" mvn_uri="mvn:org.talend.libraries/hive-metastore-1.0.0-mapr/6.1.0">
         </libraryNeeded>
-        
+        <libraryNeeded
+            context="plugin:org.talend.libraries.hadoop.mapr.5.0.0"
+            id="hive-jdbc-mapr-5.0.X-lastest"       
+            name="hive-jdbc-1.0.0-mapr.jar" mvn_uri="mvn:org.talend.libraries/hive-jdbc-1.0.0-mapr/6.1.0">
+        </libraryNeeded>
+        <libraryNeeded
+            context="plugin:org.talend.libraries.hadoop.mapr.5.0.0"
+            id="hive-service-mapr-5.0.X-lastest"       
+            name="hive-service-1.0.0-mapr.jar" mvn_uri="mvn:org.talend.libraries/hive-service-1.0.0-mapr/6.1.0">
+        </libraryNeeded>
+        <libraryNeeded
+            context="plugin:org.talend.libraries.hadoop.mapr.5.0.0"
+            id="hive-hcatalog-core-mapr-5.0.X-lastest"       
+            name="hive-hcatalog-core-1.0.0-mapr.jar" mvn_uri="mvn:org.talend.libraries/hive-hcatalog-core-1.0.0-mapr/6.1.0">
+        </libraryNeeded>
+        <libraryNeeded
+            context="plugin:org.talend.libraries.hadoop.mapr.5.0.0"
+            id="hive-hcatalog-pig-adapter-mapr-5.0.X-lastest"       
+            name="hive-hcatalog-pig-adapter-1.0.0-mapr.jar" mvn_uri="mvn:org.talend.libraries/hive-hcatalog-pig-adapter-1.0.0-mapr/6.1.0">
+        </libraryNeeded>
+        <libraryNeeded
+            context="plugin:org.talend.libraries.hadoop.mapr.5.0.0"
+            id="piggybank-mapr-5.0.X-lastest"       
+            name="piggybank-mapr50X.jar" mvn_uri="mvn:org.talend.libraries/piggybank-mapr50X/6.1.0">
+        </libraryNeeded>
+        <libraryNeeded
+            context="plugin:org.talend.libraries.hadoop.mapr.5.0.0"
+            id="mapr-hbase-5.0.X-lastest"       
+            name="mapr-hbase-5.0.0-mapr.jar" mvn_uri="mvn:org.talend.libraries/mapr-hbase-5.0.0-mapr/6.1.0">
+        </libraryNeeded>
+        <libraryNeeded
+            context="plugin:org.talend.libraries.hadoop.mapr.5.0.0"
+            id="hive-hbase-handler-5.0.X-lastest"       
+            name="hive-hbase-handler-1.0.0-mapr.jar" mvn_uri="mvn:org.talend.libraries/hive-hbase-handler-1.0.0-mapr/6.1.0">
+        </libraryNeeded>
         <libraryNeededGroup
               description="The lastest HDFS libraries of MAPR50X"
               id="HDFS-LIB-MAPR50X_LASTEST"
@@ -179,10 +218,10 @@
                  id="hadoop-hdfs-mapr-5.0.X-lastest">
            </library>
            <library
-                 id="hive-exec-mapr-5.0.X-lastest">
+                 id="hive-exec-mapr-4.1.X-lastest">
            </library>
            <library
-                 id="hive-metastore-mapr-5.0.X-lastest">
+                 id="hive-metastore-mapr-4.1.X-lastest">
            </library>
            <library
                  id="antlr-runtime-3.4.jar">
@@ -261,6 +300,9 @@
                  id="HDFS-LIB-MAPR50X_LASTEST">
            </group>
            <library
+                 id="mapr-hbase-5.0.X-lastest">
+           </library>
+           <library
                  id="hbase-client-mapr-5.0.X-lastest">
            </library>
            <library
@@ -286,6 +328,116 @@
            <library
                  id="sqoop-mapr-5.0.X-lastest">
            </library>
+        </libraryNeededGroup>
+        <libraryNeededGroup
+              description="The lastest talend mapreduce hbase storage libraries of MAPR50X"
+              id="MAPREDUCE-HBASE-LIB-MAPR50X_LASTEST"
+              name="MAPREDUCE-HBASE-LIB-MAPR50X_LASTEST">
+           <group
+                 id="HBASE-LIB-MAPR50X_LASTEST">
+           </group>
+        </libraryNeededGroup>
+        <libraryNeededGroup
+              description="The lastest pig hcat storage libraries of MAPR41X"
+              id="PIG-HCAT-LIB-MAPR50X_LASTEST"
+              name="PIG-HCAT-LIB-MAPR50X_LASTEST">
+           <library
+                 id="hive-hcatalog-core-mapr-5.0.X-lastest">
+           </library>
+           <library
+                 id="hive-hcatalog-pig-adapter-mapr-5.0.X-lastest">
+           </library>
+           <library
+                 id="libfb303-0.9.0.jar">
+           </library>
+        </libraryNeededGroup>
+        <libraryNeededGroup
+                description="The lastest pig avro storage libraries of MAPR50X"
+                id="PIG-AVRO-LIB-MAPR50X_LASTEST"
+                name="PIG-AVRO-LIB-MAPR50X_LASTEST">
+            <library
+                id="piggybank-mapr-5.0.X-lastest">
+            </library>
+        </libraryNeededGroup>
+        <libraryNeededGroup
+                description="The lastest pig rc file storage libraries of MAPR50X"
+                id="PIG-RCFILE-LIB-MAPR50X_LASTEST"
+                name="PIG-RCFILE-LIB-MAPR50X_LASTEST">
+            <library
+                id="hive-common-0.13.0-mapr-1501.jar">
+             </library>
+             <library
+                 id="hive-serde-0.13.0-mapr-1501.jar">
+             </library>
+        </libraryNeededGroup>
+        <libraryNeededGroup
+              description="The lastest Hive libraries of MAPR50X"
+              id="HIVE-LIB-MAPR50X_LASTEST"
+              name="HIVE-LIB-MAPR50X_LASTEST">
+           <group
+                 id="MAPREDUCE-LIB-MAPR50X_LASTEST">
+           </group>
+           <library
+                 id="hive-exec-mapr-5.0.X-lastest">
+           </library>
+           <library
+                 id="hive-metastore-mapr-5.0.X-lastest">
+           </library>
+           <library
+                 id="hive-jdbc-mapr-5.0.X-lastest">
+           </library>
+           <library
+                 id="hive-service-mapr-5.0.X-lastest">
+           </library>
+           <library
+                 id="curator-client-2.6.0.jar">
+           </library>
+           <library
+                 id="curator-framework-2.6.0.jar">
+           </library>
+           <library
+                 id="httpclient-4.2.5.jar">
+           </library>
+           <library
+                 id="httpcore-4.2.5.jar">
+           </library>
+           <library
+                 id="libfb303-0.9.0.jar">
+           </library>
+           <library
+                 id="libthrift-0.9.0.jar">
+           </library>
+           <library
+                 id="antlr-runtime-3.4.jar">
+           </library>
+           <library
+                 id="jdo-api-3.0.1.jar">
+           </library>
+        </libraryNeededGroup>
+        <libraryNeededGroup
+                description="The lastest pig hbase storage libraries of MAPR50X"
+                id="PIG-HBASE-LIB-MAPR50X_LASTEST"
+                name="PIG-HBASE-LIB-MAPR50X_LASTEST">
+            <group
+                  id="HBASE-LIB-MAPR50X_LASTEST">
+            </group>
+            <library
+                  id="hbase-server-mapr-5.0.X-lastest">
+            </library>
+            <library
+                  id="jline-1.0.jar">
+            </library>
+        </libraryNeededGroup>
+        <libraryNeededGroup
+                description="The lastest Hive hbase storage libraries of MAPR50X"
+                id="HIVE-HBASE-LIB-MAPR50X_LASTEST"
+                name="HIVE-HBASE-LIB-MAPR50X_LASTEST">
+            <group
+                  id="HBASE-LIB-MAPR50X_LASTEST">
+            </group>
+            <library
+                  id="hive-hbase-handler-5.0.X-lastest">
+            </library>
         </libraryNeededGroup>
    </extension>
 
