--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jOutput/tNeo4jOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jOutput/tNeo4jOutput_messages.properties
@@ -38,4 +38,9 @@ LABEL_NAME.NAME=
 
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.NEO4J_1_X_X=Neo4J 1.X.X
-DB_VERSION.ITEM.NEO4J_2_1_X=Neo4J 2.X.X
+DB_VERSION.ITEM.NEO4J_2_1_X=Neo4J 2.1.X
+DB_VERSION.ITEM.NEO4J_2_2_X=Neo4J 2.2.X
+
+SET_USERNAME.NAME=set username
+USERNAME.NAME=Username
+PASSWORD.NAME=Password
