TDI-33705 Pig UDF can not show the icon when opened. https://jira.talendforge.org/browse/TDI-33705

--- a/main/plugins/org.talend.repository.pigudf/plugin.xml
+++ b/main/plugins/org.talend.repository.pigudf/plugin.xml
@@ -6,7 +6,7 @@
       <navigatorContent
             activeByDefault="true"
             contentProvider="org.talend.repository.pigudf.content.PigudfContentProvider"
-            icon="icons/pigudf.gif"
+            icon="icons/pigudf.png"
             id="org.talend.repository.viewer.code.PigUdf"
             labelProvider="org.talend.repository.viewer.label.RepositoryViewLabelProvider"
             name="%NavigatorContent.pigUdf"
@@ -82,7 +82,7 @@
          point="org.talend.core.repository.repository_node_provider">
       <repositoryNode
             folder="code/pigudf"
-            icon="icons/pigudf.gif"
+            icon="icons/pigudf.png"
             isResouce="true"
             key="repository.pigUdf"
             label="%NavigatorContent.pigUdf"
