--- a/main/plugins/org.talend.libraries.hadoop.mapr.5.0.0/plugin.xml
+++ b/main/plugins/org.talend.libraries.hadoop.mapr.5.0.0/plugin.xml
@@ -285,6 +285,9 @@
             <library
                   id="htrace-core-3.1.0-incubating.jar">
             </library>
+            <library
+                  id="avro-1.7.4.jar">
+            </library>
          </libraryNeededGroup>        
          <libraryNeededGroup
               description="The lastest HBase libraries of MAPR50X"
