TBD-2525 feature: Add support of MapR 5.0 https://jira.talendforge.org/browse/TBD-2525

--- a/main/plugins/org.talend.repository.hbaseprovider/plugin.xml
+++ b/main/plugins/org.talend.repository.hbaseprovider/plugin.xml
@@ -116,7 +116,7 @@
       </classloader>
       <classloader
             index="HBASE:MAPR:MAPR500"
-            libraries="hbase-0.98.9-mapr-1503.jar;mapr-hbase-4.1.0-mapr.jar;maprfs-4.1.0-mapr.jar;hadoop-auth-2.5.1-mapr-1503.jar;hadoop-common-2.5.1-mapr-1503.jar;zookeeper-3.4.5-mapr-1503.jar;commons-logging-1.1.3.jar;commons-collections-3.2.1.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-codec-1.4.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;json-20080701.jar;htrace-core-2.04.jar;netty-3.6.6.Final.jar">
+            libraries="maprfs-5.0.0-mapr.jar;hadoop-auth-2.7.0-mapr-1506.jar;hadoop-common-2.7.0-mapr-1506.jar;zookeeper-3.4.5-mapr-1503.jar;json-20080701.jar;guava-13.0.1.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;commons-logging-1.1.3.jar;commons-collections-3.2.1.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;mapr-hbase-5.0.0-mapr.jar;hbase-client-0.98.12-mapr-1506.jar;hbase-common-0.98.12-mapr-1506.jar;hbase-protocol-0.98.12-mapr-1506.jar;htrace-core-2.04.jar;commons-codec-1.5.jar;netty-3.6.6.Final.jar">
       </classloader>
       <classloader
             index="HBASE:PIVOTAL_HD:PIVOTAL_HD_1_0_1"
