[TBD-2602] Depreciate mongoDB 2.5

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
@@ -60,7 +60,7 @@ REPLICA_SET.ITEM.REPLICA_PORT=Port
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.MONGODB_3_0_X=MongoDB 3.0.X
 DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
-DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
+DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X (Deprecated)
 
 SET_WRITE_CONCERN.NAME=Set write concern
 WRITE_CONCERN.NAME=Write concern
