--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages.properties
@@ -24,7 +24,7 @@ CONNECTION.NAME=Connection
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.MONGODB_3_0_X=MongoDB 3.0.X
 DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
-DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
+DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X (Deprecated)
 
 
 USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the encryption) 
