[TBD-2589] make tCassandraBulk support cql table https://jira.talendforge.org/browse/TBD-2589

--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutputBulk/tCassandraOutputBulk_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutputBulk/tCassandraOutputBulk_messages.properties
@@ -30,3 +30,8 @@ SSTABLE_STORE_PATH.NAME=SSTable directory
 #COLUMN_FAMILY_TYPE.ITEM.STANDARD=Standard
 #COLUMN_FAMILY_TYPE.ITEM.SUPER=Super
 #COLUMN_FAMILY_TYPE.NAME=Column family type
+TABLE_TYPE.NAME=Table type
+TABLE_TYPE.ITEM.NON_CQL=non-cql
+TABLE_TYPE.ITEM.CQL=cql
+SCHEMA_STMT.NAME=Schema statement
+INSERT_STMT.NAME=Insert statement
