TBD-2639 Enhancements to DI Kafka components.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tKafkaInput/tKafkaInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tKafkaInput/tKafkaInput_messages.properties
@@ -1,34 +1,49 @@
 HELP=org.talend.help.tKafkaInput
-LONG_NAME=Consumes messages from a Kafka topic
+LONG_NAME=Consume messages from a Kafka topic
+
+OUTPUT_TYPE.NAME=Output type
+OUTPUT_TYPE.ITEM.BYTES=byte[]
+OUTPUT_TYPE.ITEM.STRING=String
 SCHEMA.NAME=Schema
+
+USE_EXISTING_CONNECTION.NAME=Use an existing connection
+CONNECTION.NAME=
 
 KAFKA_VERSION.NAME=Version
 KAFKA_VERSION.ITEM.KAFKA_0_8_2_0=Kafka 0.8.2.0
-
-KAFKA_GROUP.NAME=Kafka
 ZOOKEEPER_CONNECT.NAME=Zookeeper quorum list
-KAFKA_CONSUMER_PROPERTIES.NAME=Kafka properties
-KAFKA_CONSUMER_PROPERTIES.ITEM.PROPERTY=Property
-KAFKA_CONSUMER_PROPERTIES.ITEM.VALUE=Value
+
 KAFKA_TOPIC.NAME=Topic name
+GROUP_ID.NAME=Consumer group id
 
 CUSTOM_ENCODING.NAME=Custom encoding
 ENCODING.NAME=Encoding
-KAFKA_COMMIT_INTERVAL.NAME=Offsets commit interval (ms)
-KAFKA_CONSUMER_TIMEOUT.NAME=Consumer timeout (ms)
 
-AUTO_OFFSET_RESET.NAME=Starting offset
-AUTO_OFFSET_RESET.ITEM.LARGEST=From latest
-AUTO_OFFSET_RESET.ITEM.SMALLEST=From beginning
-GROUP_ID.NAME=Consumer group id
+OFFSET_MANAGEMENT_GROUP.NAME=Offset management
 
+RESET_OFFSET.NAME=Reset offsets on consumer group
+AUTO_OFFSET_RESET.NAME=Start new consumer group
+AUTO_OFFSET_RESET.ITEM.LARGEST=from latest
+AUTO_OFFSET_RESET.ITEM.SMALLEST=from beginning
+AUTO_COMMIT_OFFSET.NAME=Auto-commit offsets
+KAFKA_COMMIT_INTERVAL.NAME=Interval (ms)
 KAFKA_OFFSET_STORAGE.NAME=Offset storage
 KAFKA_OFFSET_STORAGE.ITEM.ZOOKEEPER=Zookeeper
 KAFKA_OFFSET_STORAGE.ITEM.KAFKA=Kafka
 KAFKA_DUAL_COMMIT_CHECK.NAME=Enable dual commit
 
-OUTPUT_TYPE.NAME=Output type
-OUTPUT_TYPE.ITEM.BYTES=byte[]
-OUTPUT_TYPE.ITEM.STRING=String
+BATCH_MANAGEMENT_GROUP.NAME=Message batches
+USE_BATCH_MAX_DURATION.NAME=Stop after a maximum total duration (ms)
+BATCH_MAX_DURATION.NAME=
+USE_BATCH_MAX_SIZE.NAME=Stop after receiving a maximum number of messages
+BATCH_MAX_SIZE.NAME=
+USE_BATCH_MESSAGE_TIMEOUT.NAME=Stop after maximum time waiting between messages (ms)
+BATCH_MESSAGE_TIMEOUT.NAME=
+KAFKA_CONSUMER_TIMEOUT.NAME=Timeout precision (ms)
+
+KAFKA_CONSUMER_PROPERTIES.NAME=Kafka properties
+KAFKA_CONSUMER_PROPERTIES.ITEM.PROPERTY=Property
+KAFKA_CONSUMER_PROPERTIES.ITEM.VALUE=Value
+
 
 SAVE_OFFSET.NAME=Save the current offset with the message.
