--- a/main/plugins/org.talend.designer.components.bigdata/components/tKafkaOutput/tKafkaOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tKafkaOutput/tKafkaOutput_messages.properties
@@ -1,12 +1,14 @@
 HELP=org.talend.help.tKafkaOutput
-LONG_NAME=Emits messages as a Kafka Producer to a Kafka cluster
+LONG_NAME=Emit messages as a Kafka Producer to a Kafka cluster
+
+USE_EXISTING_CONNECTION.NAME=Use an existing connection
+CONNECTION.NAME=
 
 SCHEMA.NAME=Schema
 
 KAFKA_VERSION.NAME=Version
 KAFKA_VERSION.ITEM.KAFKA_0_8_2_0=Kafka 0.8.2.0
 
-KAFKA_GROUP.NAME=Kafka
 BROKER_LIST.NAME=Broker list
 KAFKA_PRODUCER_PROPERTIES.NAME=Kafka properties
 KAFKA_PRODUCER_PROPERTIES.ITEM.PROPERTY=Property
