--- a/main/plugins/org.talend.designer.components.bigdata/components/tKafkaCreateTopic/tKafkaCreateTopic_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tKafkaCreateTopic/tKafkaCreateTopic_messages.properties
@@ -1,12 +1,15 @@
 HELP=org.talend.help.tKafkaCreateTopic
-LONG_NAME=Creates a topic on Kafka
+LONG_NAME=Create a topic on Kafka
 SCHEMA.NAME=Schema
+
+USE_EXISTING_CONNECTION.NAME=Use an existing connection
+CONNECTION.NAME=
 
 KAFKA_VERSION.NAME=Version
 KAFKA_VERSION.ITEM.KAFKA_0_8_2_0=Kafka 0.8.2.0
 
-KAFKA_GROUP.NAME=Kafka
 ZOOKEEPER_CONNECT.NAME=Zookeeper quorum list
+
 KAFKA_TOPIC.NAME=Topic name
 KAFKA_REPLICATION.NAME=Replication factor
 KAFKA_PARTITION.NAME=Number of partitions
