Create a fragment to store the mapr 5.0.0 dependencies.

--- a/main/plugins/org.talend.libraries.hadoop.mapr.5.0.0.jars/.project
+++ b/main/plugins/org.talend.libraries.hadoop.mapr.5.0.0.jars/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.talend.libraries.hadoop.mapr.5.0.0</name>
+	<name>org.talend.libraries.hadoop.mapr.5.0.0.jars</name>
 	<comment></comment>
 	<projects>
 	</projects>
