--- a/main/plugins/org.talend.libraries.hadoop.mapr.5.0.0.jars/pom.xml
+++ b/main/plugins/org.talend.libraries.hadoop.mapr.5.0.0.jars/pom.xml
@@ -7,6 +7,6 @@
     <version>6.1.0-SNAPSHOT</version>
     <relativePath>../../../</relativePath>
   </parent>
-  <artifactId>org.talend.libraries.hadoop.mapr.5.0.0</artifactId>
+  <artifactId>org.talend.libraries.hadoop.mapr.5.0.0.jars</artifactId>
   <packaging>eclipse-plugin</packaging>
 </project>
