TBD-2675 fixed - Review the tPigLoad layout

--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -5,10 +5,10 @@ CONFIGURATION.NAME=Configuration
 
 HCAT_CONFIGURATION.NAME=HCatalog Configuration
 
-MODE.NAME=Mode
-LOCAL.NAME=Local
-MAPREDUCE.NAME=Map/Reduce
-TEZ.NAME=Tez
+LOCAL.NAME=Use local mode
+ENGINE.NAME=Execution engine
+ENGINE.ITEM.MAPREDUCE=Map/Reduce
+ENGINE.ITEM.TEZ=Tez
 
 DISTRIBUTION.NAME=Distribution
 DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
