TBD-2351 Use a clearer prompt for saving the offset in the message.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tKafkaInput/tKafkaInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tKafkaInput/tKafkaInput_messages.properties
@@ -45,5 +45,4 @@ KAFKA_CONSUMER_PROPERTIES.NAME=Kafka properties
 KAFKA_CONSUMER_PROPERTIES.ITEM.PROPERTY=Property
 KAFKA_CONSUMER_PROPERTIES.ITEM.VALUE=Value
 
-
-SAVE_OFFSET.NAME=Save the current offset with the message.
+SAVE_OFFSET.NAME=Load the offset with the message.
