--- a/main/plugins/org.talend.designer.components.bigdata/components/tKafkaInput/tKafkaInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tKafkaInput/tKafkaInput_messages.properties
@@ -22,9 +22,9 @@ ENCODING.NAME=Encoding
 OFFSET_MANAGEMENT_GROUP.NAME=Offset management
 
 RESET_OFFSET.NAME=Reset offsets on consumer group
-AUTO_OFFSET_RESET.NAME=Start new consumer group
-AUTO_OFFSET_RESET.ITEM.LARGEST=from latest
-AUTO_OFFSET_RESET.ITEM.SMALLEST=from beginning
+AUTO_OFFSET_RESET.NAME=New consumer group starts from
+AUTO_OFFSET_RESET.ITEM.LARGEST=latest
+AUTO_OFFSET_RESET.ITEM.SMALLEST=beginning
 AUTO_COMMIT_OFFSET.NAME=Auto-commit offsets
 KAFKA_COMMIT_INTERVAL.NAME=Interval (ms)
 KAFKA_OFFSET_STORAGE.NAME=Offset storage
