--- a/main/components_lib/talend-cloudera-navigator-api/pom.xml
+++ b/main/components_lib/talend-cloudera-navigator-api/pom.xml
@@ -27,7 +27,7 @@
 		<dependency>
 			<groupId>com.cloudera.navigator</groupId>
 			<artifactId>navigator-sdk-client</artifactId>
-			<version>1.1-SNAPSHOT</version>
+			<version>1.0-BETA2210</version>
 		</dependency>
 
 
