--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,7 @@
 		<module>main/plugins/org.talend.libraries.hadoop.hdp.2.0</module>
 		<module>main/plugins/org.talend.libraries.hadoop.hdp.2.1</module>
 		<module>main/plugins/org.talend.libraries.hadoop.hdp.2.2</module>
+		<module>main/plugins/org.talend.libraries.hadoop.hdp.2.3</module>
 		<module>main/plugins/org.talend.libraries.hadoop.emr.4.0.0</module>
 		<module>main/plugins/org.talend.libraries.hadoop.mapr</module>
 		<module>main/plugins/org.talend.libraries.hadoop.mapr.3.0.1</module>
