--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
 		<module>main/plugins/org.talend.libraries.hadoop.cloudera.cdh5.1</module>
 		<module>main/plugins/org.talend.libraries.hadoop.cloudera.cdh5.4</module>
 		<module>main/plugins/org.talend.libraries.hadoop.hdp.2.2</module>
+		<module>main/plugins/org.talend.libraries.hadoop.hdp.2.3</module>
 		<module>main/plugins/org.talend.libraries.hadoop.emr.4.0.0</module>
 		<module>main/plugins/org.talend.libraries.hadoop.mapr.4.0.1</module>
 		<module>main/plugins/org.talend.libraries.hadoop.mapr.4.1.0</module>
