--- a/main/plugins/org.talend.repository.hbaseprovider/plugin.xml
+++ b/main/plugins/org.talend.repository.hbaseprovider/plugin.xml
@@ -64,7 +64,7 @@
       </classloader>
       <classloader
             index="HBASE:HORTONWORKS:HDP_2_3"
-            libraries="commons-codec-1.9.jar;commons-collections-3.2.1.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.2.jar;guava-12.0.1.jar;hadoop-auth-2.7.1.2.3.0.0-2557.jar;hadoop-common-2.7.1.2.3.0.0-2557.jar;hbase-client-1.1.1.2.3.0.0-2557.jar;hbase-common-1.1.1.2.3.0.0-2557.jar;hbase-protocol-1.1.1.2.3.0.0-2557.jar;htrace-core-3.1.0-incubating.jar;jackson-core-asl-1.9.13.jar;jackson-mapper-asl-1.9.13.jar;log4j-1.2.17.jar;netty-all-4.0.23.Final.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.10.jar;zookeeper-3.4.6.2.3.0.0-2557.jar">
+            libraries="commons-codec-1.9.jar;commons-collections-3.2.1.jar;commons-configuration-1.6.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.2.jar;guava-12.0.1.jar;hadoop-auth-2.7.1.2.3.0.0-2557.jar;hadoop-common-2.7.1.2.3.0.0-2557.jar;hbase-client-1.1.1.2.3.0.0-2557.jar;hbase-common-1.1.1.2.3.0.0-2557.jar;hbase-protocol-1.1.1.2.3.0.0-2557.jar;htrace-core-3.1.0-incubating.jar;jackson-core-asl-1.9.13.jar;jackson-mapper-asl-1.9.13.jar;log4j-1.2.17.jar;netty-all-4.0.23.Final.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.10.jar;zookeeper-3.4.6.2.3.0.0-2557.jar">
       </classloader>
       <classloader
             index="HBASE:CLOUDERA:Cloudera_CDH4"
