fixbug TBD-2758 Required Neo4J JAR files are missing https://jira.talendforge.org/browse/TBD-2758

--- a/main/plugins/org.talend.repository.nosql/plugin.xml
+++ b/main/plugins/org.talend.repository.nosql/plugin.xml
@@ -287,4 +287,19 @@
             serviceId="INOSQLService">
       </Service>
    </extension>
+   <extension
+         point="org.talend.core.runtime.librariesNeeded">
+      <libraryNeeded
+        context="Needed for Neo4J Connection"
+        id="spring-data-neo4j-3.4.0.RELEASE.jar"
+        name="spring-data-neo4j-3.4.0.RELEASE.jar" 
+        mvn_uri="mvn:org.talend.libraries/spring-data-neo4j3.4.0.RELEASE/6.0.0">
+      </libraryNeeded>
+      <libraryNeeded
+        context="Needed for Neo4J Connection"
+        id="spring-data-neo4j-rest-3.4.0.RELEASE.jar"
+        name="spring-data-neo4j-rest-3.4.0.RELEASE.jar" 
+        mvn_uri="mvn:org.talend.libraries/spring-data-neo4j-rest-3.4.0.RELEASE/6.0.0">
+      </libraryNeeded>
+   </extension>
 </plugin>
