TDI-34636: remove unused jars

--- a/main/plugins/org.talend.designer.hdfsbrowse/plugin.xml
+++ b/main/plugins/org.talend.designer.hdfsbrowse/plugin.xml
@@ -355,7 +355,7 @@
    <extension
          point="org.talend.core.runtime.librariesNeeded">
       <libraryNeeded
-            context="Hive wizard"
+            context="HDFS wizard"
             language="java"
             message="Wizard use for HDFS"
             name="hadoop-core-0.20.204.0.jar" mvn_uri="mvn:org.talend.libraries/hadoop-core-0.20.204.0/6.0.0" 
@@ -363,12 +363,20 @@
             uripath="platform:/plugin/org.talend.libraries.hadoop.apache.0.20.204/lib/hadoop-core-0.20.204.0.jar">
       </libraryNeeded>
             <libraryNeeded
-            context="Hive wizard"
+            context="HDFS wizard"
             language="java"
             message="Wizard use for HDFS"
             name="hadoop-0.20.2-dev-core.jar" mvn_uri="mvn:org.talend.libraries/hadoop-0.20.2-dev-core/6.0.0" 
             required="true"
             uripath="platform:/plugin/org.talend.libraries.hadoop.mapr/lib/hadoop-0.20.2-dev-core.jar">
+      </libraryNeeded>     
+            <libraryNeeded
+            context="HDFS wizard"
+            language="java"
+            message="Wizard use for HDFS"
+            name="avro-1.7.6.jar" mvn_uri="mvn:org.talend.libraries/avro-1.7.6/6.0.0" 
+            required="true"
+            uripath="platform:/plugin/org.talend.libraries.hadoop.mapr.4.1.0/lib/avro-1.7.6.jar">
       </libraryNeeded>     
    </extension>
 
