--- a/main/plugins/org.talend.repository.hbaseprovider/plugin.xml
+++ b/main/plugins/org.talend.repository.hbaseprovider/plugin.xml
@@ -141,6 +141,22 @@
             required="true"
             uripath="platform:/plugin/org.talend.libraries.apache.common/lib/commons-lang3-3.0.jar">
       </libraryNeeded>
+            <libraryNeeded
+            context="HBase wizard"
+            language="java"
+            message="Wizard use for HBase"
+            name="zookeeper-3.3.3-cdh3u0.jar" mvn_uri="mvn:org.talend.libraries/zookeeper-3.3.3-cdh3u0/6.0.0" 
+            required="true"
+            uripath="platform:/plugin/org.talend.libraries.zookeeper/lib/zookeeper-3.3.3-cdh3u0.jar">
+      </libraryNeeded>
+            <libraryNeeded
+            context="HBase wizard"
+            language="java"
+            message="Wizard use for HBase"
+            name="hbase-0.90.1-cdh3u0.jar" mvn_uri="mvn:org.talend.libraries/hbase-0.90.1-cdh3u0/6.0.0" 
+            required="true"
+            uripath="platform:/plugin/org.talend.libraries.hadoop/lib/hbase-0.90.1-cdh3u0.jar">
+      </libraryNeeded>
    </extension>
    <extension
          point="org.talend.core.runtime.hadoopConnectionCreator">
