--- a/main/plugins/org.talend.designer.hdfsbrowse/plugin.xml
+++ b/main/plugins/org.talend.designer.hdfsbrowse/plugin.xml
@@ -83,6 +83,10 @@
             libraries="hadoop-common-2.6.0-cdh5.4.0.jar;hadoop-hdfs-2.6.0-cdh5.4.0.jar;hadoop-auth-2.6.0-cdh5.4.0.jar;avro-1.7.6-cdh5.4.0.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;commons-cli-1.2.jar;commons-collections-3.2.1.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;log4j-1.2.17.jar;jersey-core-1.9.jar;commons-codec-1.4.jar;commons-io-2.4.jar;jetty-util-6.1.26.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;htrace-core-3.0.4.jar">
       </classloader>
       <classloader
+            index="HDFS:CLOUDERA:Cloudera_CDH5_5"
+            libraries="hadoop-common-2.6.0-cdh5.5.0.jar;hadoop-hdfs-2.6.0-cdh5.5.0.jar;hadoop-auth-2.6.0-cdh5.5.0.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.2.jar;commons-cli-1.2.jar;commons-collections-3.2.1.jar;avro-1.7.6-cdh5.5.0.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;jackson-jaxrs-1.8.8.jar;jackson-xc-1.8.8.jar;guava-12.0.1.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;log4j-1.2.17.jar;jersey-core-1.9.jar;htrace-core4-4.0.1-incubating.jar;servlet-api-2.5.jar;commons-io-2.4.jar;commons-codec-1.9.jar">
+      </classloader>
+      <classloader
             index="HDFS:MAPR:MAPR1"
             libraries="hadoop-0.20.2-dev-core.jar;commons-logging-1.0.4.jar;maprfs-0.1.jar;zookeeper-3.3.2.jar;avro-1.5.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;log4j-1.2.17.jar">
       </classloader>
@@ -141,6 +145,10 @@
       <classloader
             index="HDFS:CLOUDERA:Cloudera_CDH5_4?USE_KRB"
             libraries="hadoop-common-2.6.0-cdh5.4.0.jar;hadoop-hdfs-2.6.0-cdh5.4.0.jar;hadoop-auth-2.6.0-cdh5.4.0.jar;avro-1.7.6-cdh5.4.0.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;commons-cli-1.2.jar;commons-collections-3.2.1.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;log4j-1.2.17.jar;jersey-core-1.9.jar;commons-codec-1.4.jar;commons-io-2.4.jar;jetty-util-6.1.26.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;hadoop-conf-kerberos.jar;htrace-core-3.0.4.jar">
+      </classloader>
+      <classloader
+            index="HDFS:CLOUDERA:Cloudera_CDH5_5?USE_KRB"
+            libraries="hadoop-common-2.6.0-cdh5.5.0.jar;hadoop-hdfs-2.6.0-cdh5.5.0.jar;hadoop-auth-2.6.0-cdh5.5.0.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.2.jar;commons-cli-1.2.jar;commons-collections-3.2.1.jar;avro-1.7.6-cdh5.5.0.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;jackson-jaxrs-1.8.8.jar;jackson-xc-1.8.8.jar;guava-12.0.1.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;log4j-1.2.17.jar;jersey-core-1.9.jar;htrace-core4-4.0.1-incubating.jar;servlet-api-2.5.jar;commons-io-2.4.jar;commons-codec-1.9.jar;hadoop-conf-kerberos.jar">
       </classloader>
       <classloader
             index="HDFS:AMAZON_EMR:APACHE_1_0_3_EMR"
@@ -287,6 +295,10 @@
       <classloader
             index="MAP_REDUCE:CLOUDERA:Cloudera_CDH5_4"
             libraries="hadoop-common-2.6.0-cdh5.4.0.jar;hadoop-hdfs-2.6.0-cdh5.4.0.jar;hadoop-auth-2.6.0-cdh5.4.0.jar;hadoop-mapreduce-client-common-2.6.0-cdh5.4.0.jar;hadoop-mapreduce-client-core-2.6.0-cdh5.4.0.jar;hadoop-mapreduce-client-jobclient-2.6.0-cdh5.4.0.jar;hadoop-yarn-api-2.6.0-cdh5.4.0.jar;hadoop-yarn-client-2.6.0-cdh5.4.0.jar;hadoop-yarn-common-2.6.0-cdh5.4.0.jar;avro-1.5.4.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.1.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;log4j-1.2.17.jar;htrace-core-3.0.4.jar">
+      </classloader>
+      <classloader
+            index="MAP_REDUCE:CLOUDERA:Cloudera_CDH5_5"
+            libraries="hadoop-common-2.6.0-cdh5.5.0.jar;hadoop-hdfs-2.6.0-cdh5.5.0.jar;hadoop-auth-2.6.0-cdh5.5.0.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.2.jar;commons-cli-1.2.jar;commons-collections-3.2.1.jar;avro-1.7.6-cdh5.5.0.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;jackson-jaxrs-1.8.8.jar;jackson-xc-1.8.8.jar;guava-12.0.1.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;log4j-1.2.17.jar;jersey-core-1.9.jar;htrace-core4-4.0.1-incubating.jar;servlet-api-2.5.jar;commons-io-2.4.jar;commons-codec-1.9.jar;hadoop-mapreduce-client-common-2.6.0-cdh5.5.0.jar;hadoop-mapreduce-client-core-2.6.0-cdh5.5.0.jar;hadoop-mapreduce-client-jobclient-2.6.0-cdh5.5.0.jar;hadoop-yarn-api-2.6.0-cdh5.5.0.jar;hadoop-yarn-client-2.6.0-cdh5.5.0.jar;hadoop-yarn-common-2.6.0-cdh5.5.0.jar;hadoop-yarn-server-web-proxy-2.6.0-cdh5.5.0.jar;htrace-core-3.2.0-incubating.jar;jersey-client-1.9.jar">
       </classloader>
       <classloader
             index="MAP_REDUCE:MAPR:MAPR1"
