TBD-2749 - The namenode principal is not set anymore to get the filesystem if a connection is used and if the classpath option is checked

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSConnection/tHDFSConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSConnection/tHDFSConnection_messages.properties
@@ -66,3 +66,6 @@ KEYTAB_PATH.NAME=Keytab
 AUTHENTICATION.NAME=Authentication
 
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
+
+CONFIGURATIONS_FROM_CLASSPATH.NAME = Inspect the classpath for configurations
+CONFIGURATIONS.NAME = Configurations
