--- a/main/plugins/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
@@ -66,3 +66,6 @@ KEYTAB_PATH.NAME=Keytab
 AUTHENTICATION.NAME=Authentication
 HBASE_MASTER_PRINCIPAL.NAME=Hbase Master principal
 HBASE_REGIONSERVER_PRINCIPAL.NAME=Hbase Region Server principal
+
+CONFIGURATIONS_FROM_CLASSPATH.NAME = Inspect the classpath for configurations
+CONFIGURATIONS.NAME = Configurations
