--- a/main/plugins/org.talend.designer.components.bigdata/components/tMarkLogicOutput/tMarkLogicOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMarkLogicOutput/tMarkLogicOutput_messages.properties
@@ -27,4 +27,4 @@ NB_LINE.NAME=NB_LINE
 NB_LINE_UPSERTED.NAME=NB_LINE_UPSERTED
 NB_LINE_DELETED.NAME=NB_LINE_DELETED
 NB_LINE_REJECTED.NAME=NB_LINE_REJECTED
-NB_LINE_UPDATED.NAME=NB_LINE_PATCHED
+NB_LINE_UPDATED.NAME=NB_LINE_UPDATED
