--- a/main/plugins/org.talend.hadoop.distribution.cdh550/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh550/plugin.xml
@@ -677,6 +677,7 @@
              <library id="jackson-core-2.2.3.jar" />
              <library id="jackson-annotations-2.2.3.jar" />
              <library id="snappy-java-1.0.4.1.jar"/>
+             <library id="parquet-hadoop-bundle-cdh5.5.0"/>
         </libraryNeededGroup>
         
         <!-- Spark group MRREQUIRED -->
